_sass/nav-bar.scss
#navigation {
  padding: 1.5rem;
  grid-column: 1/2;
  grid-row: 1/2;

  #main-avatar-figure {
    img {
      height: auto;
      width: 100%;
      padding: 2rem;
    }

    figcaption {
      font-size: 0.75rem;
      text-align: center;
    }

    @media screen and (min-width: 45em) {
      margin-left: 0;
      margin-right: 0;
    }
  }

  .menu-button {
    font-size: 2rem;
    width: 100%;

    @media screen and (min-width: 45em) {
      display: none;
    }
  }

  .nav-bar {
    display: flex;
    flex-direction: column;
    border-right: solid 1px;
    border-bottom: solid 1px;
    border-left: solid 1px;
    margin-top: 10px;

    @media screen and (max-width: 45em) {
      display: none;
    }

    a {
      color: inherit;
      text-decoration: none;
      text-align: center;
      border-top: solid 1px;
      padding: 10px 0;
    }

    a.active {
      color: var(--background-color);
      background-color: var(--foreground-color);
      border: none;
    }
  }

  .nav-bar.active {
    display: flex;
    flex-direction: column;
  }

  @media screen and (min-width: 45em) {
    border-right: 2px solid;
  }
}

